--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=HotelListing_db; integrated security=true"
+  },
   "AllowedHosts": "*"
 }
