Section 6: Securing Your API

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -1,12 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "ConnectionStrings": {
-    "sqlConnection": "server=(localdb)\\mssqllocaldb; database=HotelListing_db; integrated security=true"
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft.AspNetCore": "Warning"
+		}
+	},
+	"ConnectionStrings": {
+		"sqlConnection": "server=(localdb)\\mssqllocaldb; database=HotelListing_db; integrated security=true"
+	},
+	"Jwt": {
+		"issuer": "HotelListingAPI",
+		"lifetime": 15
+	},
+	"AllowedHosts": "*"
 }
